Adds NavBar plugin locations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
 	<body>
 
 		<div id='NavBar'>
-
-		</div>
+			<%= react_component('NavBar', {} ,{prerender: true}) %>
+			</div>
 
 		<div id='content'>
 			<%= yield %>
