--- a/app/views/influencers/search.html.erb
+++ b/app/views/influencers/search.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('InfluencersSearch', {}, {prerender: true}) %>
+<%= react_component('InfluencersSearch', {}, {prerender: false}) %>
