--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	<body>
 
 		<div id='NavBar'>
-			<%= react_component('NavBar', {} ,{prerender: true}) %>
+			<%= react_component('NavBar', {} ,{prerender: false}) %>
 			</div>
 
 		<div id='content'>
