--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,16 @@
 *= require_tree .
 *= require_self
 */
+
+html, body {
+	height:100%;
+	width: 100%;
+}
+.yieldContent {
+	padding-top:50px;
+}
+.container.mainContainer {
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
