--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,10 +21,22 @@ html, body {
 	width: 100%;
 }
 .yieldContent {
-	padding-top:50px;
+	/*padding-top:50px;*/
+}
+.yieldContentRow {
+	height:85%;
 }
 .container.mainContainer {
 	width:100%;
 	height:100%;
 	overflow:hidden;
+}
+
+.navRow {
+	height:15%;
+}
+
+.navbar.navbar-default.navbar-fixed-top.topNavBar{
+	height: 15%;
+	margin-bottom: 0px;
 }
