--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,19 +17,19 @@
 */
 
 html, body {
-	height:100%;
+	height: 100%;
 	width: 100%;
 }
 .yieldContent {
-	height:100%;
+	height: 100%;
 }
 .yieldContentRow {
-	height:85%;
+	height: 85%;
 }
 .container.mainContainer {
-	width:100%;
-	height:100%;
-	overflow:hidden;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 .navRow {
@@ -52,7 +52,8 @@ html, body {
 	height:100%;
 }
 
-.frontColumns>h3 {
+.frontColumns h3 {
+	padding-top: 10px;
 	text-align: center;
 }
 
