--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,11 +47,30 @@ html, body {
 	height:50%;
 }
 
-.frontSecondRow {
-	padding-top:4%;
-	height:100%;
+.howItWorks {
+	text-align: center;
+	padding-bottom: 2%;
 }
 
+.frontSecondRow {
+	padding-top: 2%;
+	height: 100%;
+}
+
+.frontThirdRow {
+	text-align: center;
+	padding-bottom: 2%;
+	padding-top: 2%;
+	background-image: url("http://s.hswstatic.com/gif/tax-tips-small-business-1-orig.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	background-color:rgba(255,0,0,0.5);
+	color: white;
+}
+.glyphHolder {
+	text-align: center;
+	padding-top: 30px;
+}
 .frontColumns h3 {
 	padding-top: 10px;
 	text-align: center;
