--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,11 @@ html, body {
 	background-color:rgba(255,0,0,0.5);
 	color: white;
 }
+.layer {
+        background-color: rgba(46, 249, 155, 0.5);
+	width: 100%;
+	height:100%;
+}
 .glyphHolder {
 	text-align: center;
 	padding-top: 30px;
@@ -77,11 +82,19 @@ html, body {
 	padding-top: 10px;
 	text-align: center;
 }
+.explainer {
+	color: white;
+	font-size: 30px;
+	padding-top: 15%;
+}
 .weHelpBy {
 	text-align: left;
 }
 
-
+.panel-default {
+	box-shadow: 1px 1px 12px #888888;
+	border-color:none;
+}
 
 .panel-default>.panel-heading {
 	color: #00415d;
