--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,3 +117,37 @@ html, body {
 .mainFooter {
 	background-color: rgba(255,255,255,0.3);
 }
+
+/*Influencer Results*/
+.panel.panel-horizontal > .panel-footer {
+    border-left: 1px solid rgba(221, 221, 221, 0); 
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 4px;
+    background-color: rgba(255, 255, 255, 0);
+    border-top: 0;
+}
+.panel.panel-horizontal {
+    display:table;
+    width:100%;
+    box-shadow: none;
+}
+.panel.panel-horizontal >.panel.panel-horizontal > .panel-body, .panel.panel-horizontal > .panel-footer {
+    display:table-cell;
+}
+.panel.panel-horizontal >.panel.panel-horizontal > .panel-footer {
+    /*width: 25%;*/
+    border:0;
+    vertical-align: middle;
+    color: black;
+}
+
+hr {
+    border-top: 1px solid rgba(238, 238, 238, 0);
+}
+.img-circle {
+    box-shadow: 1px 1px 5px #888888;
+}
+
+.btn-info {
+   margin:10px;
+}
