--- a/app/assets/stylesheets/influencers/search.css
+++ b/app/assets/stylesheets/influencers/search.css
@@ -1,5 +1,6 @@
 #majorRow {
-  background-image: url("http://www.hiatec.org/images/Business_Incubation_Startup.jpg");
+  /*background-image: url("http://www.hiatec.org/images/Business_Incubation_Startup.jpg");*/
+  background-image: url("https://i.groupme.com/1280x720.jpeg.6c037ac97fdc4100b271492052e834b0");
   width: 100%;
   background-size: cover;
   background-attachment: fixed;
