--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
 	<head>
        	 <title>LocalsLoveIt</title>
 	 <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track' => true %>
+	 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	 <%= csrf_meta_tags %>
+
 	</head>
 	<body>
 	<div class='container mainContainer'>
