--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
 			<%= react_component( 'NavBar', {} ,{prerender: true} ) %>
 		</div>
               </div>
+		<div class="container">
+			<% flash.each do |key, value| %>
+				<div class="alert alert-<%= key %>">
+					<%= value %>
+				</div>
+			<% end %>
+		</div>
+
 	      <div class = 'row yieldContentRow'>
 		<div id = 'content' class = 'yieldContent'>
 			<%= yield %>
