--- a/app/views/influencers/show.html.erb
+++ b/app/views/influencers/show.html.erb
@@ -1,1 +1,6 @@
-<%= react_component('InfluencerProfile', {influencer: @influencer}, {prerender: true}) %>
+<% link = user_signed_in? ? '/' : '/signin'-%>
+<%= user_signed_in? %>
+<%= 'link: #{link}'%>
+
+
+<%= react_component('InfluencerProfile', {influencer: @influencer, link: link}, {prerender: true}) %>
