NavBar shows login or logout depending on user status

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,7 @@
+<% link = user_signed_in? ? '/users/sign_out' : '/signin'-%>
+
+
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -11,7 +15,7 @@
 	<div class='container mainContainer'>
 	      <div class = 'row navRow'>
 		<div id = 'NavBar' class = 'navContainer'>
-			<%= react_component( 'NavBar', {} ,{prerender: true} ) %>
+			<%= react_component( 'NavBar', {link: link} ,{prerender: true} ) %>
 		</div>
               </div>
 		<div class="container">
