Changes styling of NavBar and removes styling from default bootstarp classes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,22 +29,18 @@ html, body {
 	margin-right: 0;
 }
 .container.mainContainer {
+	margin-top: 60px;
 	width: 100%;
 	height: 100%;
 	/*overflow-x: hidden;*/
 
 }
 
-.navRow {
-	height:10%;
-	box-shadow:1px 1px 12px #888888;
-}
-
-.navbar.navbar-default.navbar-fixed-top.topNavBar{
-	height: 10%;
-	margin-bottom: 0px;
+#nav{
 	background-color: #FFFFFF;
 	box-shadow:1px 1px 12px #888888;
+	padding: 1px;
+	padding-right: 10px;
 }
 /*
 .navbar-brand:after {
@@ -118,16 +114,16 @@ html, body {
 	text-align:center;
 }
 
-.btn-default {
-	background-color: #59B2E0;
-	outline: none;
-	color: #fff;
+#findInfluencers {
 	font-size: 14px;
 	height: auto;
 	font-weight: normal;
 	padding: 14px 0;
 	text-transform: uppercase;
-	border-color: #59B2E6;}
+
+
+}
+
 
 .mainFooter {
 	background-color: rgba(255,255,255,0.3);
@@ -135,7 +131,7 @@ html, body {
 
 /*Influencer Results*/
 .panel.panel-horizontal > .panel-footer {
-    border-left: 1px solid rgba(221, 221, 221, 0); 
+    border-left: 1px solid rgba(221, 221, 221, 0);
     border-top-left-radius: 0;
     border-bottom-right-radius: 4px;
     background-color: rgba(255, 255, 255, 0);
