--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
               </div>
 		<div class="container">
 			<% flash.each do |key, value| %>
-				<div class="alert alert-<%= key %>">
+				<div class="alert alert-<%= key %> alert-info">
 					<%= value %>
 				</div>
 			<% end %>
