fixes login link on influencer profile page/

--- a/app/views/influencers/show.html.erb
+++ b/app/views/influencers/show.html.erb
@@ -1,4 +1,4 @@
-<% link = user_signed_in? ? '/' : '/signin'-%>
+<% link = user_signed_in? ? '/' : '/users/sign_in'-%>
 <%= user_signed_in? %>
 <%= 'link: #{link}'%>
 
