--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -9,7 +9,11 @@
   <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        <%= render 'mailbox/folders' %>
+        <% if is_conversation %>
+            <%= render 'conversations/form' %>
+        <% else %>
+        <!-- TODO -->
+        <% end %>
       </div>
     </div>
   </div>
