Fix linking issues in NavBar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<% link = user_signed_in? ? '/users/sign_out' : 'users/sign_in'-%>
+<% link = user_signed_in? ? '/users/sign_out' : '/users/sign_in'-%>
 
 
 
