--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 	<head>
        	 <title>LocalsLoveIt</title>
 	 <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track' => true %>
+	 <%= stylesheet_link_tag 'application','https://fonts.googleapis.com/css?family=Khula', media: 'all', 'data-turbolinks-tracks' => true %>
+	 <%= stylesheet_link_tag 'application','https://fonts.googleapis.com/css?family=Shadows+Into+Light', media: 'all', 'data-turbolinks-tracks' => true %>
+	 <%= stylesheet_link_tag 'application','https://fonts.googleapis.com/css?family=Raleway', media: 'all', 'data-turbolinks-tracks' => true %>
+
 	 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	 <%= csrf_meta_tags %>
 
