--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,11 @@
 html, body {
 	height: 100%;
 	width: 100%;
+	font-family: 'Raleway', sans-serif;
 }
+/*h1,h2,h3,h4,h5,h6{
+font-family: 'Shadows Into Light', cursive;
+}*/
 .yieldContent {
 	height: 100%;
 }
@@ -57,13 +61,21 @@ html, body {
 .howItWorks {
 	text-align: center;
 	padding-bottom: 2%;
+	font-family: 'Shadows Into Light', cursive;
 }
 
 .frontSecondRow {
-	padding-top: 1%;
+	/*padding-top: 1%;*/
 	height: 100%;
+	padding-bottom: 50px;
+	padding-top:50px;
+	margin-left:0;
+	margin-right:0;
 }
 
+.frontSecondRow>.frontColumns>h3{
+font-family: 'Shadows Into Light', cursive;
+}
 .frontThirdRow {
 	text-align: center;
 	/*padding-bottom: 2%;
@@ -74,14 +86,39 @@ html, body {
 	background-color:rgba(255,0,0,0.5);
 	color: white;
 	text-shadow: 1px 1px 1px #888;
+	/*padding-top:50px;
+	padding-bottom: 10%*/
 }
 .layer {
-        background-color: rgba(46, 249, 155, 0.5);
+    background-color: rgba(46, 249, 155, 0.5);
 	width: 100%;
 	height:100%;
-	padding-top:3%;
-	padding-bottom:2%;
+	padding-top:50px;
+	padding-bottom:10%;
 }
+
+.front4thRow {
+padding-top:50px;
+text-align:center;
+background: #d53369; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #d53369 , #cbad6d); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #d53369 , #cbad6d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+color:white;
+padding-bottom: 100px;
+}
+
+.hereToHelp {
+padding-bottom:30px;
+font-family: 'Shadows Into Light', cursive;
+}
+
+.front5thRow {
+padding-top:50px;
+padding-bottom:100px;
+text-align:center;
+color:black;
+}
+
 .glyphHolder {
 	text-align: center;
 	padding-top: 30px;
