Uses new more clean image

--- a/app/assets/stylesheets/influencers/search.css
+++ b/app/assets/stylesheets/influencers/search.css
@@ -6,7 +6,8 @@
   /*background-image: url("http://static1.squarespace.com/static/56118309e4b0a677ddecf2e5/568ee994a128e65d0d399ab2/568ee994a12f4440c841c91d/1452206695837/Z50HOJW78Q.jpg");*/
   /*background-image: url("http://i.huffpost.com/gen/1769521/images/o-SMALL-BUSINESS-CASH-REGISTER-facebook.jpg");*/
   /*background-image: url("http://www.republiccountykansas.com/wp-content/uploads/2016/03/lrs.jpg");*/
-  background-image: url("https://capitalwithstrategy.com/wp-content/uploads/2015/03/SCP-Happy-Garden-Center-Owner.jpg");
+  /*background-image: url("https://capitalwithstrategy.com/wp-content/uploads/2015/03/SCP-Happy-Garden-Center-Owner.jpg");*/
+  background-image: url("http://images.huffingtonpost.com/2013-07-24-http%3A-www.shoptiques.com-boutiques-swing-IMG_0124.JPG");
   /*width: 100%;*/
   background-size: cover;
   background-attachment: fixed;
