--- a/app/views/urls/create.html.erb
+++ b/app/views/urls/create.html.erb
@@ -1,3 +1,3 @@
 <h1>Your url for <%= @url.long_url %> is: </h1>
 <%= link_to @url.short_url, @url.short_url, target: "_blank" %><br /><br />
-<%= link_to "Create another Url", "/urls/new" %>
+<%= link_to "Create or view statistics on another Url", "/urls/new" %>
