--- a/app/views/urls/get_data.html.erb
+++ b/app/views/urls/get_data.html.erb
@@ -29,7 +29,12 @@
         <h3 class="panel-title">Graphs</h3>
       </div>
       <div class="panel-body">
-      <img class = "graph-image" src= <%= @graph_url%> />
+        <div class = "col-md-6">
+          <img class = "graph-image" src= <%= @graph_url%> />
+        </div>
+        <div class = "col-md-6">
+          <img class = "graph-image" src = <%= @social_shares_graph%> />
+        </div>
     </div>
     </div>
   </div>
