--- a/app/views/urls/get_data.html.erb
+++ b/app/views/urls/get_data.html.erb
@@ -8,26 +8,21 @@
   </div>
 </div>
 <div class = "row">
-  <div class = "col-md-6">
+  <div class = "col-md-4">
     <div class = "panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Numbers</h3>
       </div>
-      <div class="panel-body">
+      <div class="panel-body big-text">
       <ul>
         <li>Links To: <%= @long_url%></li>
-        <li>Clicks: <%= @clicks %></li>
-        <li>By Day:
-          <ul>
-        <% @by_day.each do |element| %>
-          <li><%= element.day_start %> : <%= element.clicks %> </li>
-          <% end %>
-        </ul>
+        <li>Total Clicks: <%= @clicks %></li>
+
       </ul>
     </div>
     </div>
   </div>
-  <div class = "col-md-6">
+  <div class = "col-md-8">
     <div class = "panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Graphs</h3>
@@ -35,11 +30,13 @@
       <div class="panel-body">
         <div class = "row">
           <div class = "col-md-12">
+            <center> <h3>Visits By Day</h3></center>
             <%= line_chart(@click_array) %>
           </div>
         </div>
         <div class = "row">
         <div class = "col-md-12">
+          <center><h3>Visits by Platform</h3></center>
           <%= column_chart({"Facebook" => @fb_shares,
                             "Pinterest" => @pinterest_shares,
                             "Reddit" => @reddit_shares,
@@ -48,6 +45,13 @@
                             }) %>
         </div>
       </div>
+
+      <div class = "row">
+      <div class = "col-md-12">
+        <center><h3>Visits by Country</h3></center>
+        <%= geo_chart({"USA" => 5, "China" => 2}) %>
+      </div>
+    </div>
     </div>
     </div>
   </div>
