--- a/app/views/influencers/join.html.erb
+++ b/app/views/influencers/join.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({controller: :influencers, action: :new}, method: "get") do %>
+<%= form_tag('/influencers/new', method: "get") do %>
 	<%= label_tag(:twitter_handle, "Enter your twitter handle in order to begin:") %>
 	<%= text_field_tag(:twitter_handle) %>
 	<%= submit_tag("Go!") %>
