fixes spacing issues on metrics page

--- a/app/views/urls/get_data.html.erb
+++ b/app/views/urls/get_data.html.erb
@@ -1,6 +1,7 @@
 <head>
   <%= javascript_include_tag "https://www.google.com/jsapi" %>
 </head>
+<div class = "container mainContainer">
 
 <div class= "row">
   <div class = "col-md-12">
@@ -60,4 +61,5 @@
   <div class = "col-md-6 col-md-offset-5">
     <%= link_to "Create or view statstics on another URL", "/urls/new" %>
   </div>
+</div>
 </div>
