--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,3 +1,4 @@
+<div class = "container mainContainer">
 <div class = "row">
   <div class="col-md-6">
     <div class="panel panel-default">
@@ -32,4 +33,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
