--- a/app/views/influencers/new.html.erb
+++ b/app/views/influencers/new.html.erb
@@ -7,12 +7,12 @@
 
     <div class='field'>
 	    <%= i.label :twitter_handle %><br/>
-		<%= i.text_field :twitter_handle %>
+			<%= i.text_field :twitter_handle, value: @influencer.twitter_handle	%>
 	</div>
 
 	<div class='field'>
 		<%= i.label :short_bio %><br/>
-		<%= i.text_area :short_bio %>
+		<%= i.text_area :short_bio, value: @influencer.twitter_user.description %>
 	</div>
 
 	<%= i.submit 'Join as influencer' %>
