Removes mainContainer from non main containers

--- a/app/views/urls/create.html.erb
+++ b/app/views/urls/create.html.erb
@@ -1,4 +1,4 @@
-<div class = "container mainContainer">
+<div>
 <h1>Your url for <%= @url.long_url %> is: </h1>
 <%= link_to @url.short_url, @url.short_url, target: "_blank" %><br /><br />
 <%= link_to "Create or view statistics on another Url", "/urls/new" %>
