--- a/app/views/urls/get_data.html.erb
+++ b/app/views/urls/get_data.html.erb
@@ -1,7 +1,7 @@
 <head>
   <%= javascript_include_tag "https://www.google.com/jsapi" %>
 </head>
-<div class = "container mainContainer">
+<div>
 
 <div class= "row">
   <div class = "col-md-12">
