--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "container mainContainer">
+<div>
 <div class = "row">
   <div class="col-md-6">
     <div class="panel panel-default">
