--- a/app/views/influencers/search.html.erb
+++ b/app/views/influencers/search.html.erb
@@ -1,5 +1,3 @@
+<% user_role= user_signed_in? ? current_user.role : 'none'%>
 
-
-
-
-<%= react_component('InfluencersSearch', {}, {prerender: true}) %>
+<%= react_component('InfluencersSearch', {userRole: user_role}, {prerender: true}) %>
