--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -10,7 +10,7 @@
       <div class="panel-body">
         <ul>
         <% @campaigns.each do |campaign| %>
-          <li><%= campaign.name %></li>
+          <li><%= link_to campaign.name, { :action => "show", :id => campaign.id} %></li>
         <% end %>
         </ul>
       </div>
