adds country info to campaigns

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -32,6 +32,12 @@
                                "Google+" => @google_shares
                                }) %>
            </div>
+           <div class = "row">
+           <div class = "col-md-12">
+             <center><h3>Visits by Country</h3></center>
+             <%= geo_chart(@countries) %>
+           </div>
+         </div>
           </div>
         </div>
 
