--- a/app/assets/stylesheets/influencers/search.css
+++ b/app/assets/stylesheets/influencers/search.css
@@ -7,7 +7,8 @@
   /*background-image: url("http://i.huffpost.com/gen/1769521/images/o-SMALL-BUSINESS-CASH-REGISTER-facebook.jpg");*/
   /*background-image: url("http://www.republiccountykansas.com/wp-content/uploads/2016/03/lrs.jpg");*/
   /*background-image: url("https://capitalwithstrategy.com/wp-content/uploads/2015/03/SCP-Happy-Garden-Center-Owner.jpg");*/
-  background-image: url("http://images.huffingtonpost.com/2013-07-24-http%3A-www.shoptiques.com-boutiques-swing-IMG_0124.JPG");
+  /*background-image: url("http://images.huffingtonpost.com/2013-07-24-http%3A-www.shoptiques.com-boutiques-swing-IMG_0124.JPG");*/
+	background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/fb/Main_Street_Bldg_Chesterton_IN_2012.jpg");
   /*width: 100%;*/
   background-size: cover;
   background-attachment: fixed;
